fix drink image not showing

--- a/mix-it/src/styles/SelectedDrink.css
+++ b/mix-it/src/styles/SelectedDrink.css
@@ -26,7 +26,7 @@
 
 .selected-drink {
   font-size: clamp(1rem, 2vw, 2rem);
-  padding: 1rem 2rem;
+  padding: 1rem 3.5rem;
   color: rgb(230, 230, 230);
   background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.55));
   text-decoration: none;
@@ -69,6 +69,19 @@
     0 0 10px #a925dd,
     0 0 98px #e535eb;
   color: #fff6a9;
+}
+
+.selected-drink__wrapper {
+
+  img {
+    object-fit: cover;
+    aspect-ratio: 2/1 ;
+  }
+}
+
+.selected-drink__wrapper img{
+  min-height: 700px;
+  max-width: 600px;
 }
 
 .multi-column {
